--- a/src/javafxmlapplication/view/ExpenseAccount.fxml
+++ b/src/javafxmlapplication/view/ExpenseAccount.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
@@ -33,13 +33,13 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <MenuButton mnemonicParsing="false" text="Compare with" GridPane.columnIndex="1">
+                        <MenuButton fx:id="compareOptions" mnemonicParsing="false" text="Compare with" GridPane.columnIndex="1">
                           <items>
                             <MenuItem mnemonicParsing="false" text="Rest of the months of the year" />
                             <MenuItem mnemonicParsing="false" text="Same month from last year" />
                           </items>
                         </MenuButton>
-                        <ComboBox prefWidth="150.0" />
+                        <ChoiceBox fx:id="categorySelector" prefWidth="150.0" />
                      </children>
                   </GridPane>
                </children>
@@ -48,7 +48,7 @@
                </padding>
             </HBox>
             <Separator prefWidth="200.0" />
-            <ListView prefHeight="200.0" prefWidth="200.0">
+            <ListView fx:id="expenseList" prefHeight="200.0" prefWidth="200.0">
                <VBox.margin>
                   <Insets left="50.0" right="50.0" top="20.0" />
                </VBox.margin>
@@ -64,7 +64,7 @@
          <children>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0">
+                  <Button fx:id="backButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0">
                      <graphic>
                         <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                            <image>
