feat: keyboard interaction with login page

--- a/src/javafxmlapplication/view/LogIn.fxml
+++ b/src/javafxmlapplication/view/LogIn.fxml
@@ -30,7 +30,7 @@
                                     <Insets bottom="5.0" left="5.0" />
                                  </VBox.margin>
                               </Label>
-                              <TextField fx:id="nickNameInput" onKeyTyped="#onTextTyped" prefHeight="26.0" prefWidth="400.0" promptText="Nickname" />
+                              <TextField fx:id="nickNameInput" onKeyPressed="#onKeyPressedOnNickName" onKeyTyped="#onTextTyped" prefHeight="26.0" prefWidth="400.0" promptText="Nickname" />
                               <Label fx:id="nickNameErrorText" styleClass="errorText" />
                            </children>
                         </VBox>
@@ -45,7 +45,7 @@
                                                 <Insets bottom="5.0" left="5.0" />
                                              </VBox.margin>
                                           </Label>
-                                          <PasswordField fx:id="passwordInput" prefHeight="26.0" prefWidth="400.0" promptText="Password" />
+                                          <PasswordField fx:id="passwordInput" onKeyPressed="#onKeyPressedOnPassword" prefHeight="26.0" prefWidth="400.0" promptText="Password" />
                                        </children>
                                     </VBox>
                                     <Button fx:id="seePasswordButton" mnemonicParsing="false" text="👁" />
@@ -54,7 +54,7 @@
                               <Label fx:id="passwordErrorText" styleClass="errorText" />
                            </children>
                         </VBox>
-                        <Button fx:id="loginButton" mnemonicParsing="false" onAction="#onLoginButtonPressed" text="Log In" />
+                        <Button fx:id="loginButton" mnemonicParsing="false" onAction="#onLoginButtonPressed" onKeyPressed="#onKeyPressedOnLogin" text="Log In" />
                      </children>
                      <padding>
                         <Insets left="180.0" right="180.0" />
