--- a/src/javafxmlapplication/view/SignUp.fxml
+++ b/src/javafxmlapplication/view/SignUp.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -174,7 +175,10 @@
             <ImageView fx:id="profilePicture" fitHeight="230.0" fitWidth="230.0" pickOnBounds="true" preserveRatio="true">
                <VBox.margin>
                   <Insets bottom="20.0" />
-               </VBox.margin></ImageView>
+               </VBox.margin>
+               <image>
+                  <Image url="@../styles/resources/Profile_avatar_placeholder_large.png" />
+               </image></ImageView>
             <Button fx:id="selectImageButton" mnemonicParsing="false" onAction="#onSelectImageButtonPressed" onKeyPressed="#onKeyPressedOnImage" text="Select an image" />
          </children>
          <BorderPane.margin>
