--- a/src/javafxmlapplication/view/SignUp.fxml
+++ b/src/javafxmlapplication/view/SignUp.fxml
@@ -26,8 +26,8 @@
          <children>
             <GridPane alignment="TOP_CENTER" prefHeight="413.0" prefWidth="496.0">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="271.1999969482422" minWidth="10.0" prefWidth="249.19998779296873" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="378.0" minWidth="10.0" prefWidth="205.59996337890624" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="271.1999969482422" minWidth="10.0" prefWidth="208.8" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="378.0" minWidth="10.0" prefWidth="244.80000000000004" />
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="180.20001220703125" minWidth="0.0" prefWidth="50.40003662109376" />
               </columnConstraints>
               <rowConstraints>
@@ -50,7 +50,7 @@
                            </font></Text>
                         <HBox prefHeight="100.0" prefWidth="200.0">
                            <children>
-                              <TextField fx:id="nameField" onKeyPressed="#onKeyPressedOnName" prefHeight="26.0" prefWidth="235.0">
+                              <TextField fx:id="nameField" onKeyPressed="#onKeyPressedOnName" prefHeight="26.0" prefWidth="201.0">
                                  <HBox.margin>
                                     <Insets bottom="5.0" />
                                  </HBox.margin></TextField>
