--- a/src/javafxmlapplication/view/ManageCategories.fxml
+++ b/src/javafxmlapplication/view/ManageCategories.fxml
@@ -11,14 +11,14 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.ManageCategoriesController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.ManageCategoriesController">
    <center>
       <HBox alignment="CENTER" spacing="20.0" BorderPane.alignment="CENTER_RIGHT">
          <children>
-            <ListView fx:id="expenseList" prefHeight="200.0" prefWidth="600.0" />
+            <ListView fx:id="categoryList" prefHeight="200.0" prefWidth="600.0" />
             <VBox spacing="20.0">
                <children>
-                  <Button fx:id="newExpenseButton" mnemonicParsing="false" onAction="#onAddButtonPressed">
+                  <Button fx:id="newCategoryButton" mnemonicParsing="false" onAction="#onAddButtonPressed">
                      <graphic>
                         <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                            <image>
