--- a/src/javafxmlapplication/view/UpdateExpense.fxml
+++ b/src/javafxmlapplication/view/UpdateExpense.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="620.0" prefWidth="930.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.UpdateExpenseController">
+<BorderPane prefHeight="620.0" prefWidth="930.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.UpdateExpenseController">
    <center>
       <VBox alignment="CENTER" BorderPane.alignment="CENTER">
          <children>
@@ -78,6 +78,8 @@
                         <Insets left="120.0" />
                      </HBox.margin>
                   </Button>
+                  <Text fx:id="invoiceText" strokeType="OUTSIDE" strokeWidth="0.0" />
+                  <Text fx:id="deleteInvoice" strokeType="OUTSIDE" strokeWidth="0.0" />
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0" spacing="20.0">
