--- a/src/javafxmlapplication/view/UpdateExpense.fxml
+++ b/src/javafxmlapplication/view/UpdateExpense.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
@@ -92,6 +93,23 @@
       </VBox>
    </center>
    <top>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Update expenses" BorderPane.alignment="CENTER" />
+      <StackPane prefHeight="81.0" prefWidth="930.0" BorderPane.alignment="CENTER">
+         <children>
+            <HBox prefHeight="71.0" prefWidth="930.0">
+               <children>
+                  <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="40.0" text="◄">
+                     <HBox.margin>
+                        <Insets left="10.0" top="10.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="98.0" prefWidth="930.0">
+               <children>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Update expenses" />
+               </children>
+            </HBox>
+         </children>
+      </StackPane>
    </top>
 </BorderPane>
