--- a/src/javafxmlapplication/view/SameMonthLastYear.fxml
+++ b/src/javafxmlapplication/view/SameMonthLastYear.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.SameMonthLastYearController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.SameMonthLastYearController">
    <top>
       <StackPane prefHeight="50.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
@@ -22,7 +22,7 @@
             </HBox>
             <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Button fx:id="goBackButton" mnemonicParsing="false" onAction="#onGoBackButtonPressed" text="&lt;">
+                  <Button fx:id="goBackButton" mnemonicParsing="false" onAction="#onGoBackButtonPressed" prefHeight="30.0" prefWidth="40.0" text="◄">
                      <font>
                         <Font size="18.0" />
                      </font>
