--- a/src/javafxmlapplication/view/Main.fxml
+++ b/src/javafxmlapplication/view/Main.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="620.0" prefWidth="930.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.MainController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="620.0" prefWidth="930.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.MainController">
    <top>
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="SuperApp" BorderPane.alignment="CENTER">
          <BorderPane.margin>
@@ -36,12 +36,12 @@
                <children>
                   <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1">
                      <children>
-                        <Text fx:id="nameLabel" strokeType="OUTSIDE" strokeWidth="0.0" text="Surname, Name">
+                        <Text fx:id="nameLabel" strokeType="OUTSIDE" strokeWidth="0.0" text="(Surname, Name)">
                            <font>
                               <Font size="10.0" />
                            </font>
                         </Text>
-                        <Text fx:id="mailLabel" strokeType="OUTSIDE" strokeWidth="0.0" text="Email">
+                        <Text fx:id="mailLabel" strokeType="OUTSIDE" strokeWidth="0.0" text="(Email)">
                            <font>
                               <Font size="10.0" />
                            </font>
@@ -61,7 +61,7 @@
                   </VBox>
                </children>
                <VBox.margin>
-                  <Insets bottom="10.0" left="5.0" right="5.0" top="20.0" />
+                  <Insets bottom="10.0" left="20.0" right="5.0" top="20.0" />
                </VBox.margin>
             </GridPane>
             <Button fx:id="generateReportButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onGenerateReportPressed" prefHeight="26.0" prefWidth="122.0" text="Generate report" />
