--- a/src/javafxmlapplication/view/ProfileSettings.fxml
+++ b/src/javafxmlapplication/view/ProfileSettings.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -30,12 +31,12 @@
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="180.20001220703125" minWidth="0.0" prefWidth="50.40003662109376" />
               </columnConstraints>
               <rowConstraints>
-                  <RowConstraints maxHeight="78.59998168945313" minHeight="10.0" prefHeight="59.00001220703125" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="78.59998168945313" minHeight="10.0" prefHeight="22.999987792968753" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="86.20000610351563" minHeight="10.0" prefHeight="51.79997558593752" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="139.39998779296872" minHeight="10.0" prefHeight="64.79998168945312" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="103.4" minHeight="10.0" prefHeight="22.40001831054687" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="128.99999389648437" minHeight="10.0" prefHeight="69.99998779296874" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="78.59998168945313" minHeight="10.0" prefHeight="43.99998168945312" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="78.59998168945313" minHeight="10.0" prefHeight="23.79998779296875" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="86.20000610351563" minHeight="10.0" prefHeight="46.20001220703125" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="139.39998779296872" minHeight="10.0" prefHeight="62.400000000000006" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="103.4" minHeight="10.0" prefHeight="22.399981689453142" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="128.99999389648437" minHeight="10.0" prefHeight="91.20001831054685" vgrow="SOMETIMES" />
                   <RowConstraints maxHeight="144.79998779296872" minHeight="10.0" prefHeight="84.40001220703124" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
@@ -99,7 +100,7 @@
                               <Insets bottom="2.0" />
                            </VBox.margin>
                            <font>
-                              <Font size="13.0" />
+                              <Font size="14.0" />
                            </font></Text>
                         <HBox>
                            <children>
@@ -130,14 +131,14 @@
                               <Insets bottom="2.0" />
                            </VBox.margin>
                            <font>
-                              <Font size="13.0" />
+                              <Font size="14.0" />
                            </font>
                         </Text>
                         <HBox prefHeight="100.0" prefWidth="200.0">
                            <children>
-                              <PasswordField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="454.0" promptText="Set password to...">
+                              <PasswordField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="454.0">
                                  <HBox.margin>
-                                    <Insets bottom="4.0" />
+                                    <Insets />
                                  </HBox.margin>
                               </PasswordField>
                               <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="33.0" text="👁">
@@ -147,9 +148,14 @@
                               </Button>
                            </children>
                         </HBox>
+                        <Text fx:id="sixCharLengthText" strokeType="OUTSIDE" strokeWidth="0.0" text="→ At least 6 characters long" />
+                        <Text fx:id="sixCharLengthText1" strokeType="OUTSIDE" strokeWidth="0.0" text="→ Alphanumeric characters only" />
                         <HBox prefHeight="100.0" prefWidth="200.0">
                            <children>
-                              <PasswordField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="454.0" promptText="Enter new password again..." />
+                              <PasswordField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="454.0" promptText="Enter new password again...">
+                                 <HBox.margin>
+                                    <Insets top="4.0" />
+                                 </HBox.margin></PasswordField>
                            </children>
                         </HBox>
                         <Text fill="#a40000" strokeType="OUTSIDE" strokeWidth="0.0" text="The passwords don't match" />
@@ -181,17 +187,13 @@
    <center>
       <VBox alignment="TOP_CENTER" prefHeight="497.0" prefWidth="533.0" BorderPane.alignment="CENTER">
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="✎Profile Picture">
-               <VBox.margin>
-                  <Insets bottom="7.0" />
-               </VBox.margin>
-               <font>
-                  <Font size="14.0" />
-               </font></Text>
             <ImageView fx:id="profilePicture" fitHeight="230.0" fitWidth="230.0" pickOnBounds="true">
                <VBox.margin>
                   <Insets bottom="20.0" />
-               </VBox.margin></ImageView>
+               </VBox.margin>
+               <image>
+                  <Image url="@../styles/resources/Profile_avatar_placeholder_large.png" />
+               </image></ImageView>
             <Button fx:id="selectImageButton" mnemonicParsing="false" onAction="#onSelectImageButtonPressed" text="Select picture" />
          </children>
          <BorderPane.margin>
