--- a/src/javafxmlapplication/view/SignUp.fxml
+++ b/src/javafxmlapplication/view/SignUp.fxml
@@ -170,13 +170,23 @@
                <font>
                   <Font size="14.0" />
                </font></Text>
-            <ImageView fx:id="profilePicture" cache="true" fitHeight="230.0" fitWidth="230.0" pickOnBounds="true">
+            <StackPane prefHeight="230.0" prefWidth="230.0">
+               <children>
+                  <ImageView fx:id="profilePicture" cache="true" fitHeight="230.0" fitWidth="230.0" onMouseClicked="#onProfilePictureClicked" onMouseEntered="#onProfilePictureEntered" onMouseExited="#onProfilePictureExited" pickOnBounds="true">
+                     <image>
+                        <Image url="@../styles/resources/Profile_avatar_placeholder_large.png" />
+                     </image>
+                  </ImageView>
+                  <Text fx:id="removePicture" strokeType="OUTSIDE" strokeWidth="0.0" text="Remove picture" wrappingWidth="124.4091796875">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Text>
+               </children>
                <VBox.margin>
                   <Insets bottom="20.0" />
                </VBox.margin>
-               <image>
-                  <Image url="@../styles/resources/Profile_avatar_placeholder_large.png" />
-               </image></ImageView>
+            </StackPane>
             <Button fx:id="selectImageButton" mnemonicParsing="false" onAction="#onSelectImageButtonPressed" onKeyPressed="#onKeyPressedOnImage" text="Select an image" />
          </children>
          <BorderPane.margin>
