--- a/src/javafxmlapplication/view/ProfileSettings.fxml
+++ b/src/javafxmlapplication/view/ProfileSettings.fxml
@@ -13,6 +13,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -51,7 +52,7 @@
                            </font></Text>
                         <HBox prefHeight="100.0" prefWidth="200.0">
                            <children>
-                              <TextField fx:id="nametextField" prefHeight="26.0" prefWidth="222.0">
+                              <TextField fx:id="nameField" prefHeight="26.0" prefWidth="222.0">
                                  <HBox.margin>
                                     <Insets bottom="5.0" />
                                  </HBox.margin></TextField>
@@ -71,7 +72,7 @@
                            <font>
                               <Font size="14.0" />
                            </font></Text>
-                        <TextField fx:id="surnameTextField" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="222.0">
+                        <TextField fx:id="surnameField" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="222.0">
                            <VBox.margin>
                               <Insets bottom="5.0" />
                            </VBox.margin></TextField>
@@ -87,7 +88,7 @@
                            <font>
                               <Font size="14.0" />
                            </font></Text>
-                        <TextField fx:id="mailTextField">
+                        <TextField fx:id="emailField">
                            <VBox.margin>
                               <Insets bottom="5.0" />
                            </VBox.margin></TextField>
@@ -104,14 +105,14 @@
                            </font></Text>
                         <HBox>
                            <children>
-                              <PasswordField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="454.0" />
-                              <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="33.0" text="👁">
+                              <PasswordField fx:id="passwordField" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="454.0" />
+                              <Button fx:id="viewPasswordButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="33.0" text="👁">
                                  <HBox.margin>
                                     <Insets left="5.0" />
                                  </HBox.margin></Button>
                            </children>
                         </HBox>
-                        <Text fill="#a40000" strokeType="OUTSIDE" strokeWidth="0.0" text="Wrong password, try again" />
+                        <Text fx:id="wrongPasswordText" fill="#a40000" strokeType="OUTSIDE" strokeWidth="0.0" text="Wrong password, try again" />
                      </children>
                   </VBox>
                   <VBox GridPane.columnSpan="2" GridPane.rowIndex="4">
@@ -136,12 +137,12 @@
                         </Text>
                         <HBox prefHeight="100.0" prefWidth="200.0">
                            <children>
-                              <PasswordField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="454.0">
+                              <PasswordField fx:id="newPasswordField" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="454.0">
                                  <HBox.margin>
                                     <Insets />
                                  </HBox.margin>
                               </PasswordField>
-                              <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="33.0" text="👁">
+                              <Button fx:id="viewNewPasswordButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="33.0" text="👁">
                                  <HBox.margin>
                                     <Insets left="5.0" />
                                  </HBox.margin>
@@ -149,16 +150,16 @@
                            </children>
                         </HBox>
                         <Text fx:id="sixCharLengthText" strokeType="OUTSIDE" strokeWidth="0.0" text="→ At least 6 characters long" />
-                        <Text fx:id="sixCharLengthText1" strokeType="OUTSIDE" strokeWidth="0.0" text="→ Alphanumeric characters only" />
+                        <Text fx:id="alphanumCharOnlyText" strokeType="OUTSIDE" strokeWidth="0.0" text="→ Alphanumeric characters only" />
                         <HBox prefHeight="100.0" prefWidth="200.0">
                            <children>
-                              <PasswordField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="454.0" promptText="Enter new password again...">
+                              <PasswordField fx:id="confirmNewPasswordField" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="454.0" promptText="Confirm new password...">
                                  <HBox.margin>
                                     <Insets top="4.0" />
                                  </HBox.margin></PasswordField>
                            </children>
                         </HBox>
-                        <Text fill="#a40000" strokeType="OUTSIDE" strokeWidth="0.0" text="The passwords don't match" />
+                        <Text fx:id="confirmPasswordMessage" fill="#a40000" strokeType="OUTSIDE" strokeWidth="0.0" text="The passwords don't match" />
                      </children>
                   </VBox>
                   <Text fx:id="usernameText" strokeType="OUTSIDE" strokeWidth="0.0" text="(Username)">
@@ -187,14 +188,24 @@
    <center>
       <VBox alignment="TOP_CENTER" prefHeight="497.0" prefWidth="533.0" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fx:id="profilePicture" fitHeight="230.0" fitWidth="230.0" pickOnBounds="true">
+            <StackPane prefHeight="230.0" prefWidth="230.0">
+               <children>
+                  <ImageView fx:id="profilePicture" cache="true" fitHeight="230.0" fitWidth="230.0" onMouseClicked="#onProfilePictureClicked" onMouseEntered="#onProfilePictureEntered" onMouseExited="#onProfilePictureExited" pickOnBounds="true">
+                     <image>
+                        <Image url="@../styles/resources/Profile_avatar_placeholder_large.png" />
+                     </image>
+                  </ImageView>
+                  <Text fx:id="removePicture" strokeType="OUTSIDE" strokeWidth="0.0" text="Remove picture" wrappingWidth="124.4091796875">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Text>
+               </children>
                <VBox.margin>
                   <Insets bottom="20.0" />
                </VBox.margin>
-               <image>
-                  <Image url="@../styles/resources/Profile_avatar_placeholder_large.png" />
-               </image></ImageView>
-            <Button fx:id="selectImageButton" mnemonicParsing="false" onAction="#onSelectImageButtonPressed" text="Select picture" />
+            </StackPane>
+            <Button fx:id="selectImageButton" mnemonicParsing="false" onAction="#onSelectImageButtonPressed" text="Select an image" />
          </children>
          <BorderPane.margin>
             <Insets left="20.0" right="70.0" top="30.0" />
@@ -204,7 +215,7 @@
    <bottom>
       <AnchorPane prefHeight="129.0" prefWidth="922.0" BorderPane.alignment="CENTER">
          <children>
-            <Button layoutX="379.0" layoutY="47.99999999999999" mnemonicParsing="false" prefHeight="33.0" prefWidth="168.0" text="Save changes" AnchorPane.bottomAnchor="48.0" AnchorPane.leftAnchor="379.0" AnchorPane.rightAnchor="375.0" />
+            <Button fx:id="saveChangesButton" layoutX="381.0" layoutY="47.99999999999999" mnemonicParsing="false" onAction="#onSaveChangesButtonPressed" prefHeight="33.0" prefWidth="168.0" text="Save changes" AnchorPane.bottomAnchor="48.0" AnchorPane.rightAnchor="373.0" />
          </children>
       </AnchorPane>
    </bottom>
